<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <HorizontalScrollView
        android:id="@+id/hsv_linear_images"
        android:layout_below="@id/et_name"
        android:layout_width="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_height="64dp">

        <LinearLayout
            android:id="@+id/linear_images"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </HorizontalScrollView>

    <EditText
        android:id="@+id/et_desc"
        android:layout_below="@id/hsv_linear_images"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/description"
        android:gravity="start|top"
        android:layout_width="match_parent"
        android:layout_height="88dp"/>

</RelativeLayout>